--- a/Foods/style.css
+++ b/Foods/style.css
@@ -1,3 +1,4 @@
+/* DEFAULT STYLE */
 * {
   margin: 0;
   padding: 0;
@@ -22,7 +23,70 @@ html {
   text-shadow: 0.3rem 0.3rem 0.3rem #000;
 }
 
+/* NAVBAR */
+.navbar {
+  width: 100%;
+  height: 14rem;
+  background-color: #000;
+  position: fixed;
+  top: 0;
+  z-index: 100;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  box-shadow: 0.2rem 0.2rem #000;
+}
+
+.navbar-link {
+  color: #aaa;
+  margin: 0 4rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.navbar-link:hover {
+  color: #fff;
+  transition: color 0.3s;
+}
+
+.navbar-link i {
+  font-size: 7rem;
+}
+
+.navbar-link span {
+  font-size: 2.5rem;
+  font-weight: 900;
+  letter-spacing: 0.5rem;
+  margin-top: 0.5rem;
+}
+
+.menu {
+  width: 4rem;
+  height: 6rem;
+  background-color: #000;
+  position: fixed;
+  top: 15rem;
+  left: 5rem;
+  border-radius: 30rem 30rem 15rem 15rem;
+  box-shadow: 1rem 1rem 1rem #000, -0.1rem -0.1rem -0.1rem #000;
+  cursor: pointer;
+}
+
+.menu::before {
+  content: "";
+  width: 0.3rem;
+  height: 15rem;
+  background-color: #000;
+  position: absolute;
+  top: -15rem;
+  left: calc(50% - 0.15rem);
+  box-shadow: 0.1rem 0 0.1rem #000;
+}
+
 /* SECTION 1 */
+
 .section-1 {
   width: 100%;
   height: 100vh;
@@ -48,6 +112,7 @@ html {
 }
 
 /* SECTION 2 */
+
 .section-2 {
   width: 100%;
   height: 100vh;
