--- a/Foods/style.css
+++ b/Foods/style.css
@@ -97,9 +97,10 @@ html {
   top: 5rem;
   left: 5rem;
   border-radius: 30rem 30rem 15rem 15rem;
-  box-shadow: 1rem 1rem 1rem #000, -0.1rem -0.1rem -0.1rem #000;
-  z-index: 100;
+  box-shadow: 0.3rem 0.3rem 0.3rem rgb(142, 142, 142),
+    -0.1rem -0.1rem 0.1rem rgb(142, 142, 142);
   cursor: pointer;
+  z-index: 100;
   transition: top 0.4s 0.2s;
 }
 
