--- a/Foods/style.css
+++ b/Foods/style.css
@@ -23,7 +23,8 @@ html {
   text-shadow: 0.3rem 0.3rem 0.3rem #000;
 }
 
-/* NAVBAR */
+/* NAVBAR AND MENU DROP*/
+
 .navbar {
   width: 100%;
   height: 14rem;
@@ -120,7 +121,7 @@ html {
   box-shadow: 0.1rem 0 0.1rem #000;
 }
 
-/* SECTION 1 */
+/* SECTION 1 - HEADER WITH ICON ANIMATION */
 
 .section-1 {
   width: 100%;
@@ -146,7 +147,7 @@ html {
   transition: transform 0.3s 0.3s;
 }
 
-/* SECTION 2 */
+/* SECTION 2 - POPULAR MEALS*/
 
 .section-2 {
   width: 100%;
@@ -237,7 +238,7 @@ html {
   box-shadow: -0.2rem -0.2rem 0.2rem #000;
 }
 
-/* SECTION 3 */
+/* SECTION 3 - GALLERY */
 
 .section-3 {
   background-color: #333;
@@ -345,7 +346,7 @@ html {
   transition: opacity 1s 1s;
 }
 
-/* SECTION 4 */
+/* SECTION 4 - FOOTER */
 
 .section-4 {
   width: 100%;
@@ -417,7 +418,7 @@ html {
   text-align: center;
 }
 
-/* RESPONSIVE */
+/* MEDIA QUERIES */
 
 @media (max-width: 1400px) {
   html {
