--- a/Creative Design/style.css
+++ b/Creative Design/style.css
@@ -116,3 +116,7 @@ body {
   text-shadow: 0.1rem 0.1rem 0.2rem #ddd, -0.1rem -0.1rem 0.2rem #ddd;
 }
 /* END OF SECTION 1 */
+
+/* SECTION 2 */
+
+/* END OF SECTION 2 */
