--- a/business_agency/style.css
+++ b/business_agency/style.css
@@ -18,7 +18,7 @@ html {
 
 .navbar {
   width: 100%;
-  height: 8rem;
+  height: 100vh;
   background-color: rgba(0, 0, 0, 0.9);
   position: fixed;
   top: 0;
@@ -33,24 +33,74 @@ html {
 }
 
 .logo a {
-  font-family: "MADE Soulmaze", sans-serif;
+  font-family: "Notable", sans-serif;
   font-size: 2.5rem;
   color: #eee;
   letter-spacing: 0.1rem;
 }
 
 .logo span {
-  font-family: "MADE Soulmaze", sans-serif;
+  font-family: "Notable", sans-serif;
   font-size: 3.5rem;
   font-weight: bold;
   color: #9e0e09;
 }
+.nav-link {
+  font-family: "Notable", sans-serif;
+  color: #fff;
+  font-size: 3.5rem;
+  letter-spacing: 0.3rem;
+  margin: 2rem 0;
+  transition: color 0.9s;
+}
+
+.nav-link:hover {
+  color: #9e0e09;
+}
 
 .nav-list {
-  display: none;
+  position: absolute;
+  top: 25%;
+  left: 50%;
+  transform: translate(-50%);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 /* END OF NAVBAR */
+
+/* MENU */
+
+.menu {
+  width: 4rem;
+  height: 4rem;
+  /* background-color: #eee; */
+  position: fixed;
+  z-index: 100;
+  top: 2rem;
+  right: 4rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  cursor: pointer;
+}
+
+.line {
+  width: 100%;
+  height: 0.2rem;
+  background-color: #eee;
+}
+
+.line-1 {
+  width: 50%;
+}
+
+.line-3 {
+  width: 50%;
+  margin-left: auto;
+}
+/* END of MENU */
 
 /* SECTION 1 */
 .section-1 {
