--- a/business_agency/style.css
+++ b/business_agency/style.css
@@ -18,12 +18,17 @@ html {
 
 .navbar {
   width: 100%;
-  height: 100vh;
+  height: 8rem;
   background-color: rgba(0, 0, 0, 0.9);
   position: fixed;
   top: 0;
   z-index: 10;
   padding: 3rem;
+  transition: height 0.5s;
+}
+
+.navbar.change {
+  height: 100vh;
 }
 
 .logo {
@@ -52,6 +57,9 @@ html {
   letter-spacing: 0.3rem;
   margin: 2rem 0;
   transition: color 0.9s;
+  opacity: 0;
+  visibility: hidden;
+  transition: all 0.2s;
 }
 
 .nav-link:hover {
@@ -66,6 +74,12 @@ html {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+.change .nav-list {
+  opacity: 1;
+  visibility: visible;
+  transition: all 0.7s 0.5s;
 }
 
 /* END OF NAVBAR */
