--- a/business_agency/style.css
+++ b/business_agency/style.css
@@ -1,4 +1,4 @@
-/* Common Styles */
+/* COMMON STYLES */
 * {
   margin: 0;
   padding: 0;
@@ -6,7 +6,6 @@
   outline: none;
   text-decoration: none;
   list-style-type: none;
-  /* font-family: "Notateble"; */
   font-family: "Baloo Da 2";
 }
 
@@ -14,9 +13,23 @@ html {
   font-size: 62.5%;
   scroll-behavior: smooth;
 }
-/* End of Common Styles */
 
-/* Navbar */
+.section-heading {
+  font-family: "Oswald", sans-serif;
+  font-size: 10rem;
+  font-weight: 300;
+  color: #ddd;
+  margin-right: 4rem;
+}
+
+.section-heading-line {
+  width: 15rem;
+  height: 0.2rem;
+  background-color: #ddd;
+}
+/* END OF COMMON STYLES */
+
+/* NAVBAR */
 .navbar {
   width: 100%;
   height: 8rem;
@@ -132,9 +145,9 @@ html {
 .nav-link:hover {
   color: #9e0e09;
 }
-/*  End of Navbar */
+/*  END OF NAVBAR */
 
-/* Section 1 */
+/* SECTION 1  */
 .section-1 {
   width: 100%;
   height: 100vh;
@@ -283,6 +296,8 @@ html {
   left: 100%;
 }
 
+/* END OF SECTION 1 */
+
 /* SECTION 2 */
 
 .section-2 {
@@ -293,20 +308,6 @@ html {
   align-items: center;
   padding: 0 10rem;
   position: relative;
-}
-
-.section-heading {
-  font-family: "Oswald", sans-serif;
-  font-size: 10rem;
-  font-weight: 300;
-  color: #ddd;
-  margin-right: 4rem;
-}
-
-.section-heading-line {
-  width: 15rem;
-  height: 0.2rem;
-  background-color: #ddd;
 }
 
 .video-wrapper {
@@ -399,10 +400,76 @@ html {
   align-self: flex-end;
   font-size: 5rem;
 }
-
 /* END OF SECTION 2 */
 
 /* SECTION 3 */
+.section-3 {
+  width: 100%;
+  height: 100vh;
+  background-color: #03070e;
+  display: flex;
+  align-items: center;
+  padding-left: 10rem;
+}
+
+.pricing-cards-wrapper {
+  width: 100%;
+  display: flex;
+  justify-content: space-evenly;
+  padding: 5rem;
+}
+
+.pricing-card {
+  width: 28rem !important;
+  height: 45rem !important;
+  background-color: #181b1d;
+  border-radius: 1rem;
+  box-shadow: 2rem 2rem 6rem rgba(0, 0, 0, 0.7);
+}
+
+.pricing-card-front {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.pricing-card-heading {
+  font-size: 2rem;
+  font-weight: 300;
+  color: #fff;
+  width: 100%;
+  height: 5rem;
+  display: flex;
+  align-items: center;
+  padding-left: 2rem;
+  border-radius: 1rem 1rem 0 0;
+}
+
+.heading-free {
+  background: linear-gradient(to right, #087285, #0da5d3);
+}
+
+.heading-basic {
+  background: linear-gradient(to right, #946809, #bdba0e);
+}
+
+.heading-standard {
+  background: linear-gradient(to right, #a10c14, #e23b3b);
+}
+
+.heading-premium {
+  background: linear-gradient(to right, #0b7e48, #3be286);
+}
+
+.pricing-card-price {
+  font-family: "Notable", sans-serif;
+  font-size: 6rem;
+  font-weight: 200;
+  color: #fff;
+}
 /* END OF SECTION 3 */
 
 /* SECTION 4 */
