--- a/business_agency/style.css
+++ b/business_agency/style.css
@@ -420,11 +420,12 @@ html {
 }
 
 .pricing-card {
-  width: 28rem !important;
-  height: 45rem !important;
+  width: 24rem !important;
+  height: 41rem !important;
   background-color: #181b1d;
   border-radius: 1rem;
   box-shadow: 2rem 2rem 6rem rgba(0, 0, 0, 0.7);
+  margin: 8px;
   /* transform: rotateY(180deg); */
 }
 
@@ -467,7 +468,7 @@ html {
 
 .pricing-card-price {
   font-family: "Notable", sans-serif;
-  font-size: 6rem;
+  font-size: 5rem;
   font-weight: 200;
   color: #fff;
 }
@@ -529,40 +530,6 @@ html {
 
 .btn-premium {
   background-color: #3be286;
-}
-
-.pricing-card-back {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  transform: rotateY(180deg);
-  border-radius: 1rem;
-}
-
-.back-free {
-  background: linear-gradient(to right, #087285, #0da5d3);
-}
-
-.back-basic {
-  background: linear-gradient(to right, #946809, #bdba0e);
-}
-
-.back-standard {
-  background: linear-gradient(to right, #a10c14, #e23b3b);
-}
-
-.back-premium {
-  background: linear-gradient(to right, #0b7e48, #3be286);
-}
-
-.pricing-card-back a {
-  color: #fff;
-  font-size: 2rem;
 }
 
 /* END OF SECTION 3 */
