--- a/business_agency/style.css
+++ b/business_agency/style.css
@@ -599,7 +599,7 @@ html {
   color: #eee;
   border: none;
   margin-bottom: 2rem;
-  font-family: "Oswals", sans-serif;
+  font-family: "Oswald", sans-serif;
   font-size: 1.8rem;
   font-weight: 300;
   letter-spacing: 0.1rem;
@@ -623,3 +623,34 @@ html {
 }
 
 /* END OF SECTION 4 */
+
+/* FOOTER */
+.footer {
+  width: 100%;
+  height: 12rem;
+  background-color: #202122;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 10rem;
+}
+
+.footer-nav a {
+  font-family: "Baloo Da 2";
+  font-size: 2rem;
+  color: #ccc;
+  margin-right: 3rem;
+  letter-spacing: 0.1rem;
+  transition: color 0.3s;
+}
+
+.footer-nav a:hover {
+  color: #862323;
+}
+
+.footer p {
+  font-size: 2rem;
+  color: #ddd;
+}
+
+/* END OF FOOTER */
